AC_INIT([cuetools], [3.0.0], [info@are.ma])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LEX
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_PROG_YACC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile doc/Makefile lib/Makefile tool/Makefile test/Makefile extra/Makefile])
AC_OUTPUT

LT_INIT
AC_CONFIG_MACRO_DIRS([m4])
